<resources>
    <string name="app_name">Movies Central</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="base_tmdb_img_url">http://image.tmdb.org/t/p/</string>
    <string name="youtube_img_url">http://img.youtube.com/vi/</string>
    <string name="action_my_profile">My Profile</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Overview</string>
    <string name="sort_by">Sort By:</string>
    <string name="contentDescription">Movie Poster</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="added_to_favorites">Added to Favourites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="removed_from_favorites">Removed from Favourites</string>
    <string name="no_reviews">No Reviews</string>
    <string name="appwidget_text">Movies and Reviews</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="trailer_thumbnail_image">Trailer Thumbnail Image</string>
    <string name="no_fav_movie">No Favourite movies</string>
    <string name="invalid_api_key">Invalid API Key</string>
    <string name="spinner_popular">Popular</string>
    <string name="spinner_top_rated">Top Rated</string>
    <string name="spinner__favorites">Favorites</string>
    <string name="check_internet_connection">Please check your Internet Connection and try again!</string>
    <string name="click_back_again">Click Back again to Exit</string>
    <string name="more">More</string>

    <!--AdMob Banner Ad test ID-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Widget-->
    <string name="add_widget">Add widget</string>
    <string name="widget_layout_heading">Movies Central</string>
    <string name="widget_title_separator">Widget Title Separator</string>

    <!--Login and Register-->
    <string name="btn_send">Send</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_clicking_register_you_agree_to_all_the_terms_and_privacy_policy_of_movies_central">By clicking Register you agree to all the Terms and Privacy Policy of Movies Central.</string>
    <string name="register">Register</string>
    <string name="login_here">Already have an account? Login here.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_mobile_number">Mobile Number: </string>
    <string name="profile_email_id">Email ID: </string>
    <string name="profile_name">Name: </string>
    <string name="not_a_member_yet_sign_up_here">Not a Member yet? Sign Up here.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_the_email_address_associated_with_your_movies_central_account">Please enter the email address associated with your Movies Central account.</string>
    <string name="enter_profile_information">Enter Profile Information</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save_profile">Save Profile</string>
    <string name="info">Info</string>
    <string name="login_to_continue">Please Login to continue</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_name">Please enter your Name</string>
    <string name="plaese_enter_mobile_number">Please enter your Mobile Number</string>
    <string name="profile_info_saved">Profile information saved successfully</string>
    <string name="enter_registered_email">Enter your registered Email ID</string>
    <string name="password_reset_instructions_sent">We have sent you instructions to reset your password!</string>
    <string name="enter_valid_email_id">Please enter a valid Email ID!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="reset_password_email_sent">Reset password email is sent!</string>
    <string name="reset_password_email_failed">Failed to send reset email!</string>
    <string name="do_you_want_to_logout">Do you want to logout ??</string>
    <string name="take_me_away">Take me away!</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="not_now">Not now</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="accept_terms_and_policy">Please accept the Terms and Privacy Policy.</string>
    <string name="registration_failed">Registration failed.</string>
</resources>
